--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,14 @@
-.format, body, pre, h1 {
-	font-family: Comic Sans MS;
-	text-align: center
+html, body {
+	font-family: "Comic Sans MS";
+	text-align: center;
+	padding: 10px;
 }
 
 pre {
 	line-height: 2.0;
+	text-align: center;
+	font-family: "Comic Sans MS";
+	font-weight: bold;
 }
 
 a:link, a:visited {
